# rust-etcd

./: Cargo.toml  docker-compose.yml
src/: auth.rs  client.rs  error.rs  first_ok.rs  http.rs  kv.rs  lib.rs  members.rs  options.rs  stats.rs
tests/: auth_test.rs  client_test.rs  kv_test.rs  members_test.rs  stats_test.rs  test.rs
