[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A client library for CoreOS's etcd."
documentation = "https://docs.rs/etcd"
edition = "2018"
homepage = "https://github.com/jimmycuadra/rust-etcd"
keywords = ["etcd", "coreos", "database"]
license = "MIT"
name = "etcd"
readme = "README.md"
repository = "https://github.com/jimmycuadra/rust-etcd"
version = "0.10.0"

[lib]
test = false

[dependencies]
futures = "0.3"
hyper = "0.13"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1"
base64 = "0.11"
log = "0.4"
tokio = "0.2"

[dependencies.hyper-tls]
optional = true
version = "0.4"

[dependencies.native-tls]
optional = true
version = "0.2"

[features]
default = ["tls"]
tls = ["hyper-tls", "native-tls"]
